First HTML CSS Essentials

--- a/StylePage.html
+++ b/StylePage.html
@@ -6,7 +6,7 @@
     <body>
         <p>
             Back to <a href="index.html" style="color: rgb(100, 100, 100);" >index page!</a> <br>
-            Back to <a href="index.html" style="color:green; text-decoration: underline" >index page!</a> no underline!
+            Back to <a href="index.html" style="color:green; text-decoration:underline" >index page!</a> underline!
         </p>
     </body>
 </html>
