Folder Restr & StylePage

--- a/Pages/NewPage.html
+++ b/Pages/NewPage.html
@@ -4,6 +4,6 @@
 </head>
 <body>
     <p>
-        This is new page.<br> Here's link for <a href="../index.html">Index Page</a>!
+        This is new page.<br> Here's link for <a href="index.html">Index Page</a>!
     </p>
 </body>
