--- a/Pages/index.html
+++ b/Pages/index.html
@@ -46,7 +46,7 @@
 
         <h3>Anchor for linking pages!</h3>
         <p>
-            This is how to use a href for linking pages! <a href="NewFolder/NewPage.html"> New page here</a>. This opens in <em>same</em> window!
+            This is how to use a href for linking pages! <a href="NewPage.html""> New page here</a>. This opens in <em>same</em> window!
         </p>
         <p>
                 This is how to use a href for linking pages! <a href="Google.com" target="_blank"> Google page here</a>. This opens in <em>new</em> window!
