--- a/Pages/StylePage.html
+++ b/Pages/StylePage.html
@@ -2,13 +2,16 @@
 <html>
     <head>
         <title>StyledPage</title>
-        <link rel="stylesheet" href="../CSS/StylePage.css" />
+        <link rel="stylesheet" href="CSS/StylePage.css" />
     </head>
     <body>
+        <div>
         <h1>Styled Page</h1>
         <p>
             Back to <a href="index.html" >index page!</a> <br>
             Back to <a id=noUnderlineAnchor href="index.html"  >index page!</a> no underline!
         </p>
+        <img src="../Images/BlueDuck.jpg" alt="BlueDuck" />
+        </div>
     </body>
-</html>
+</html>     
