--- a/Pages/index.html
+++ b/Pages/index.html
@@ -54,6 +54,9 @@
         <p>
             Link to <a href="StylePage.html"> Styled page</a>! .
         </p>
+        <p>
+                Link to <a href="AssignmentPage.html"> Assignment 1 Page</a>! .
+        </p>
 
     </body>
 </html>
